# todolist

./: README.md  stack.yaml  todolist.cabal  todolist.proto
src/: Main.hs  Schema.hs
src/Repository/: Connection.hs  Repository.hs
src/Schemas/Requests/: AddTaskRequest.hs  DeleteTaskRequest.hs  GetTasksRequest.hs  UpdateTaskRequest.hs
src/Schemas/Responses/: Task.hs
src/Services/: AddTaskService.hs  DeleteTaskService.hs  GetTasksService.hs  UpdateTaskService.hs
