name:               todolist
version:            0.1.0.0

-- synopsis:
-- description:
homepage:           https://github.com/githubuser/todolist#readme
author:             Kevin da Silva
maintainer:         kevin.kds80@gmail.com
copyright:          2023 Kevin da Silva
category:           Web
build-type:         Simple
cabal-version:      >=1.10
extra-source-files: README.md

executable todolist
  hs-source-dirs:   src
  main-is:          Main.hs
  other-modules:    Schema
                  , Schemas.Requests.AddTaskRequest
                  , Schemas.Requests.GetTasksRequest
                  , Schemas.Requests.UpdateTaskRequest
                  , Schemas.Requests.DeleteTaskRequest
                  , Schemas.Responses.Task
                  , Repository.Connection
                  , Repository.Repository
                  , Services.AddTaskService
                  , Services.GetTasksService
                  , Services.UpdateTaskService
                  , Services.DeleteTaskService
  ghc-options:      -Wall
  default-language: Haskell2010
  build-depends:
      base            >=4.12  && <5
    , mu-grpc-server  >=0.4.0
    , mu-protobuf     >=0.4.0
    , mu-rpc          >=0.4.0
    , mu-schema       >=0.3.1
    , text
    , mongoDB
    , aeson
    , AesonBson
    , mtl
    , base
